--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "removeComments": false,
+    "emitDeclarationOnly": false,
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "target": "ESNext",
