--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0"
